tests/parsing/smtlib/v2.7/errors/080_define-fun-rec_unclosed_1.smt2
(set-logic ALL)
(define-fun-rec foo () bool true _)
